# mac0467mvp

./: .gitignore  README.md  pyproject.toml
cycle/: settings.py  urls.py
cycle/promos/: admin.py  apps.py  models.py
cycle/promos/migrations/: 0001_initial.py
cycle/wppbot/: apps.py  generate_response_message.py  messageTexts.py  models.py  report_state.py  urls.py  views.py
cycle/wppbot/migrations/: 0001_initial.py  0002_rename_authorid_report_author_report_datecreated_and_more.py  0003_alter_report_report_state.py  0004_alter_report_report_state.py  0005_report_address_report_latitude_report_longitude.py
